--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,54 @@
 body {
     font-family: "Open Sans", sans-serif;
 }
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.container-big {
+    max-width: 60%;
+}
+
+.container-small {
+    max-width: 50%;
+}
+
+.m-centered {
+    margin: 0 auto;
+}
+
+.flex-between {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav {
+    padding: 1rem;
+    background-color: white;
+    border-bottom: 1px dashed black;
+}
+
+header nav ul {
+    margin: 0 1em;
+}
+
+header nav ul li {
+    display: inline-block;
+    margin: 0 .5em
+}
+
+div.jumbotron-box .jumbotron-info {
+    width: 40%;
+    border-top: 1px dashed white;
+}
+
+.bg-lightblue {
+    background-color: #b4d0e7;
+}
