--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,8 @@ article.plan-card ul,
 article.plan-card li,
 article.plan-card a,
 article.plan-card button,
-article.feature-card p {
+article.feature-card p,
+section.dropbox-business a {
     font-size: .7rem;
 }
 
@@ -215,6 +216,7 @@ article.plan-card button~span {
     font-size: .7rem;
     padding-bottom: 1.5rem;
     border-bottom: 1px solid #e4e4e5;
+    margin-right: .2rem;
 }
 
 article.plan-card ul.sub-recap,
@@ -271,6 +273,18 @@ article.feature-card h3 {
     margin: .4em 0 1em;
 }
 
+section.dropbox-business h2 {
+    width: 60%;
+    margin-bottom: 2.5rem;
+    font-size: 1.7rem;
+    padding-top: 2rem;
+}
+
+article.plan-card a:visited,
+section.dropbox-business a:visited {
+    color: #0000d7;
+}
+
 section.customer-teams {
     background-color: #f5f5f5;
     padding: 0;
@@ -287,9 +301,17 @@ section.customer-teams div.customers {
 }
 
 section.customer-teams div.customer {
-    border: 1px solid blueviolet;
+    border: 8px solid transparent;
     width: 175px;
     height: 175px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.customer img {
+    width: 60%;
+    filter: invert(1);
 }
 
 section.dropbox-business.bg-lightblue,
@@ -340,4 +362,37 @@ footer div.language span {
 
 .bg-lightblue {
     background-color: #b4d0e7;
+}
+
+#designit {
+    border-color: #d1e9cd;
+    background-color: #a2d39b;
+}
+
+#florida-uni {
+    background-color: #0093ce;
+}
+
+#arizona-uni {
+    background-color: #61082b;
+}
+
+#topps {
+    background-color: #ff1c1c;
+}
+
+#world-bicycle {
+    background-color: #d5001f;
+}
+
+#lonely-planet {
+    background-color: #0d2481;
+}
+
+#hearst-corp {
+    background-color: #b4d0e7;
+}
+
+#clear-channel {
+    background-color: #ffd830;
 }
