added dropdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,11 @@ h2 {
     clear: both;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
 /* || HEADER */
 header nav {
     padding: 1rem;
@@ -103,12 +108,34 @@ header nav ul li {
     margin: 0 .5em
 }
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    background-color: white;
+    min-width: 5rem;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 0 0 2px 2px;
+}
+
+.dropdown-content p {
+    padding: .2rem;
+}
+
+.dropdown-content p:first-child {
+    padding-top: .5rem;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 /* ||   MAIN    */
 /* -----------  */
 /* || JUMBOTRON */
 section.jumbotron {
     padding-bottom: .5rem;
-    padding-top: 3rem;
+    padding-top: 3.5rem;
 }
 
 section.jumbotron h1 {
