--- a/css/style.css
+++ b/css/style.css
@@ -424,8 +424,11 @@ section.dropbox-business.bg-lightblue h2 {
     width: 50%;
 }
 
-section.dropbox-business.bg-lightblue button {
+section.dropbox-business.bg-lightblue a {
     width: 30%;
+}
+
+section.dropbox-business.bg-lightblue button {
     padding: .8em 1.6em;
 }
 
@@ -506,6 +509,65 @@ footer div.language {
     content: '\f0d8'
 }
 
+/* || LOGIN */
+.login-nav a:last-child {
+    margin-right: .5rem;
+    font-size: 1rem;
+}
+
+section.login-main-content {
+    padding: 2rem 0;
+}
+
+.login-panel {
+    max-width: 30%;
+    margin: 0 auto;
+    border: 1px solid black;
+    border-radius: 24px;
+    padding: 2rem 1.2rem .5rem;
+}
+
+.login-panel h1,
+.login-panel h2 {
+    text-align: center;
+    padding-bottom: .5rem;
+}
+
+.login-panel h1 {
+    font-size: 1.7rem;
+}
+
+.login-panel h2 {
+    font-size: 1.3rem;
+}
+
+.login-panel input[type="email"],
+.login-panel input[type="password"] {
+    margin: .5rem 0;
+    padding: .4rem .2rem .2rem;
+    width: 100%;
+    font-size: .8rem;
+}
+
+.login-panel input[type="checkbox"] {
+    vertical-align: middle;
+    margin-left: .1rem;
+    cursor: pointer;
+}
+
+.login-panel .btn {
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-panel button {
+    width: 8rem;
+    font-size: .8rem;
+    margin-top: .5rem;
+}
+
 /*  ** STYLE */
 .bg-lightblue {
     background-color: #b4d0e7;
@@ -535,8 +597,7 @@ section.dropbox-business a:visited {
 }
 
 footer nav ul li:hover,
-.jumbotron-info-content p>a:hover,
-button:hover {
+.jumbotron-info-content p>a:hover {
     text-decoration: underline;
 }
 
